--- a/options.html
+++ b/options.html
@@ -75,6 +75,7 @@
       </div>
       <p>This extension is powered by <a href="https://code.google.com/p/crypto-js/">CryptoJS</a>, <a href="http://bgrins.github.io/filereader.js/">FileReader.js</a>, and <a href="https://github.com/eligrey/FileSaver.js/">FileSaver.js</a>.</p>
       <p>With thanks to <a href="http://uofthacks.com">UofTHacks</a> and <a href="https://www.twitter.com/jeffshin">Jeff Shin</a>.</p>
+      <p>Officially approved by <a href="https://www.twitter.com/RealUofTHacks">@RealUofTHacks</a>.</p>
     </article>
     <aside>
       Support us! Donate to Bitcoin address:
