Correct "Rabbit DES" to "Rabbit"

--- a/options.html
+++ b/options.html
@@ -27,7 +27,7 @@
               <option value="AES">AES</option>
               <option value="DES">DES</option>
               <option value="TripleDES">Triple DES</option>
-              <option value="Rabbit">Rabbit DES</option>
+              <option value="Rabbit">Rabbit</option>
               <option value="RC4">RC4</option>
               <option value="RC4Drop">RC4Drop</option>
             </select>
