--- a/options.html
+++ b/options.html
@@ -82,7 +82,7 @@
       <span id="bitcoin-address">14ng36zThq5dq2WyDwi4dnga6FmqPp2RKa</span>
     </aside>
     <footer>
-      <p>Hacked together at:</p>
+      <p>Overall #1 hack at:</p>
       <a href="http://uofthacks.com" id="hacks"></a>
     </footer>
   </div>
