New passphrases can be deleted.
You can now immediately delete saved passphrases after you save them
without having to refresh. Shifted to local storage for settings.

--- a/options.html
+++ b/options.html
@@ -50,25 +50,25 @@
       <div id="devs">
         <a href="https://twitter.com/spe_">
           <div class="dev" id="dev1">
-            <img src="img/spencer.jpg" alt="Photo">
+            <img src="img/spencer.jpg" alt="Photo" />
             Spencer Elliott
           </div>
         </a>
         <a href="https://twitter.com/arkon">
           <div class="dev" id="dev2">
-            <img src="img/eugene.jpg" alt="Photo">
+            <img src="img/eugene.jpg" alt="Photo" />
             Eugene Cheung
           </div>
         </a>
         <a href="https://twitter.com/RealUofTHacks">
           <div class="dev" id="dev3">
-            <img src="img/philippe.jpg" alt="Photo">
+            <img src="img/philippe.jpg" alt="Photo" />
             Phillipe Bareau
           </div>
         </a>
         <a href="https://twitter.com/NickGoh_">
           <div class="dev" id="dev4">
-            <img src="img/nick.jpg" alt="Photo">
+            <img src="img/nick.jpg" alt="Photo" />
             Nicholas Goh
           </div>
         </a>
