Fixed paths in options files. Compressed PNG files.

--- a/options/options.html
+++ b/options/options.html
@@ -3,7 +3,7 @@
 <head>
   <title>Cryptr Options</title>
   <link rel="stylesheet" type="text/css" href="options.css">
-  <link rel="stylesheet" type="text/css" href="scrollbar.css">
+  <link rel="stylesheet" type="text/css" href="../scrollbar.css">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
@@ -86,7 +86,7 @@
       <a href="http://uofthacks.com" id="hacks"></a>
     </footer>
   </div>
-  <script type="text/javascript" src="jquery-2.0.3.min.js"></script>
+  <script type="text/javascript" src="../jquery-2.0.3.min.js"></script>
   <script type="text/javascript" src="options.js"></script>
 </body>
 </html>
