Made hiding/showing things in file mode better.
Text box and copy button now are hidden/shown using CSS, with a "file"
class added to the body tag via JS. Allows clear button to be properly
styled in this case.

--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Cryptr</title>
   <link rel="stylesheet" type="text/css" href="popup.css">
   <link rel="stylesheet" type="text/css" href="scrollbar.css">
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
   <header>
@@ -24,7 +24,7 @@
   <article id="settings">
     <input class="textbox" id="passphrase" type="password" placeholder="Enter a passphrase" tabindex="2" />
     <input id="passphrase-visible" type="checkbox" tabindex="-1" />
-    <label for="passphrase-visible" class="eye" title="Toggle passphrase visibility">Test</label>
+    <label for="passphrase-visible" class="eye" title="Toggle passphrase visibility"></label>
     <button id="random" title="Generate a random passphrase" tabindex="-1"></button>
   </article>
   <footer>
