More organization. Microscopic UI tweaks to popup.

--- a/options/options.html
+++ b/options/options.html
@@ -86,7 +86,7 @@
       <a href="http://uofthacks.com" id="hacks"></a>
     </footer>
   </div>
-  <script type="text/javascript" src="../jquery-2.0.3.min.js"></script>
+  <script type="text/javascript" src="../jQuery/jquery-2.0.3.min.js"></script>
   <script type="text/javascript" src="options.js"></script>
 </body>
 </html>
