Compressed some images. Cleaned up some code.

--- a/options/options.html
+++ b/options/options.html
@@ -20,7 +20,7 @@
         </label>
       </div>
       <div class="option">
-        Encryption cipher:
+        Encryption algorithm:
         <div id="dropdown">
           <label id="type">
             <select id="typevals" title="Cipher type">
@@ -79,7 +79,7 @@
     </article>
     <aside>
       Support us! Donate to Bitcoin address:
-      <span id="bitcoin-address">14ng36zThq5dq2WyDwi4dnga6FmqPp2RKa</span>
+      <a href="bitcoin:14ng36zThq5dq2WyDwi4dnga6FmqPp2RKa" id="bitcoin-address">14ng36zThq5dq2WyDwi4dnga6FmqPp2RKa</a>
     </aside>
     <footer>
       <p>Overall #1 hack at:</p>
