--- a/popup/popup.html
+++ b/popup/popup.html
@@ -24,7 +24,7 @@
   <article id="settings">
     <input class="textbox" id="passphrase" type="password" placeholder="Enter a passphrase" tabindex="2" />
     <input id="passphrase-visible" type="checkbox" tabindex="-1" title="Toggle passphrase visibility" />
-    <label for="passphrase-visible" class="eye" title="Toggle passphrase visibility"></label>
+    <label class="eye" for="passphrase-visible" title="Toggle passphrase visibility"></label>
     <button id="random" title="Generate a random passphrase" tabindex="-1"></button>
   </article>
   <footer>
