Update FileReader.js Files are now encrypted & decrypted using ArrayBuffers. File size limit is greatly increased (takes around 5 seconds to encrypt a 25 MB file on a MacBookAir5,2). Removed closing of window on lost focus
TODO:
Organize code some more (perhaps use classes?)
Asynchronous file encryption with progress indicator
Better window management: only allow one Cryptr window

--- a/popup.html
+++ b/popup.html
@@ -35,6 +35,10 @@
   <script type="text/javascript" src="filereader.js"></script>
   <script type="text/javascript" src="FileSaver.js"></script>
   <script type="text/javascript" src="cryptojs/rollups/aes.js"></script>
+  <script type="text/javascript" src="cryptojs/rollups/rabbit.js"></script>
+  <script type="text/javascript" src="cryptojs/rollups/rc4.js"></script>
+  <script type="text/javascript" src="cryptojs/rollups/tripledes.js"></script>
+  <script type="text/javascript" src="cryptojs/lib-typedarrays.js"></script>
   <script type="text/javascript" src="popup.js"></script>
 </body>
 </html>
