--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="https://chrome.google.com/webstore/detail/cryptr/kbnaeockclnoomgnildebnoihhjnehcb" id="download">Get it from the Chrome web store</a>
   </section>
   <section id="demo">
-    <div id="animation"></div>
+    <!--<div id="animation"></div>-->
   </section>
   <footer>
     <section class="sponsor">
@@ -27,12 +27,12 @@
         <img src="img/uofthacks.jpg" alt="UofTHacks" />
       </a>
     </section>
-    <section class="sponsor">
+    <!--<section class="sponsor">
       <p>Website powered by</p>
       <a href="http://www.softlayer.com/">
         <img src="img/softlayer.jpg" alt="IBM Softlayer" />
       </a>
-    </section>
+    </section>-->
   </footer>
 </body>
 </html>
